[gd_scene load_steps=20 format=2]

[ext_resource path="res://Menu/Controles/Biografia.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="Theme" id=18]
HScrollBar/styles/scroll = SubResource( 17 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.870588, 0.121569, 0.121569, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.607843, 0.803922, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.270588, 0.709804, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.913725, 0.698039, 0.101961, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0117647, 0.0705882, 0.482353, 1 )

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "1"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "2"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "3"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "4"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "5"

[sub_resource type="AnimationNodeBlendSpace1D" id=6]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = 0.0
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = 1.0
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = 2.0
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = 3.0
blend_point_4/node = SubResource( 16 )
blend_point_4/pos = 4.0
max_space = 6.0
snap = 1.0

[sub_resource type="Animation" id=7]
resource_name = "1"

[sub_resource type="Animation" id=8]
resource_name = "2"

[sub_resource type="Animation" id=9]
resource_name = "3"

[sub_resource type="Animation" id=10]
resource_name = "4"

[sub_resource type="Animation" id=11]
resource_name = "5"

[node name="Biografia" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="selecion_personajes" type="PanelContainer" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 600.0
rect_min_size = Vector2( 200, 0 )

[node name="Control" type="Control" parent="HBoxContainer/selecion_personajes"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/selecion_personajes/Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Globo" type="PanelContainer" parent="HBoxContainer/selecion_personajes/Control/VBoxContainer"]
margin_right = 90.0
margin_bottom = 90.0
rect_min_size = Vector2( 90, 90 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="globo" type="Button" parent="HBoxContainer/selecion_personajes/Control/VBoxContainer/Globo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 83.0
margin_bottom = 83.0

[node name="Ave" type="PanelContainer" parent="HBoxContainer/selecion_personajes/Control/VBoxContainer"]
margin_top = 94.0
margin_right = 90.0
margin_bottom = 184.0
rect_min_size = Vector2( 90, 90 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ave" type="Button" parent="HBoxContainer/selecion_personajes/Control/VBoxContainer/Ave"]
margin_left = 7.0
margin_top = 7.0
margin_right = 83.0
margin_bottom = 83.0

[node name="Dron" type="PanelContainer" parent="HBoxContainer/selecion_personajes/Control/VBoxContainer"]
margin_top = 188.0
margin_right = 90.0
margin_bottom = 278.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 2

[node name="dron" type="Button" parent="HBoxContainer/selecion_personajes/Control/VBoxContainer/Dron"]
margin_left = 7.0
margin_top = 7.0
margin_right = 83.0
margin_bottom = 83.0

[node name="PanelContainer4" type="PanelContainer" parent="HBoxContainer/selecion_personajes/Control/VBoxContainer"]
margin_top = 282.0
margin_right = 90.0
margin_bottom = 372.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 2

[node name="PanelContainer5" type="PanelContainer" parent="HBoxContainer/selecion_personajes/Control/VBoxContainer"]
margin_top = 376.0
margin_right = 90.0
margin_bottom = 466.0
rect_min_size = Vector2( 0, 90 )
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
theme = SubResource( 18 )
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ScrollContainer"]
margin_right = 4100.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 0

[node name="1" type="PanelContainer" parent="HBoxContainer/ScrollContainer/HBoxContainer"]
margin_right = 820.0
margin_bottom = 600.0
rect_min_size = Vector2( 820, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="2" type="PanelContainer" parent="HBoxContainer/ScrollContainer/HBoxContainer"]
margin_left = 820.0
margin_right = 1640.0
margin_bottom = 600.0
rect_min_size = Vector2( 820, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="3" type="PanelContainer" parent="HBoxContainer/ScrollContainer/HBoxContainer"]
margin_left = 1640.0
margin_right = 2460.0
margin_bottom = 600.0
rect_min_size = Vector2( 820, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="4" type="PanelContainer" parent="HBoxContainer/ScrollContainer/HBoxContainer"]
margin_left = 2460.0
margin_right = 3280.0
margin_bottom = 600.0
rect_min_size = Vector2( 820, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 4 )

[node name="5" type="PanelContainer" parent="HBoxContainer/ScrollContainer/HBoxContainer"]
margin_left = 3280.0
margin_right = 4100.0
margin_bottom = 600.0
rect_min_size = Vector2( 820, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/blend_position = 4.99357

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/1 = SubResource( 7 )
anims/2 = SubResource( 8 )
anims/3 = SubResource( 9 )
anims/4 = SubResource( 10 )
anims/5 = SubResource( 11 )

[connection signal="pressed" from="HBoxContainer/selecion_personajes/Control/VBoxContainer/Globo/globo" to="." method="_on_globo_pressed"]
[connection signal="pressed" from="HBoxContainer/selecion_personajes/Control/VBoxContainer/Ave/ave" to="." method="_on_ave_pressed"]
[connection signal="pressed" from="HBoxContainer/selecion_personajes/Control/VBoxContainer/Dron/dron" to="." method="_on_dron_pressed"]
[connection signal="scroll_ended" from="HBoxContainer/ScrollContainer" to="." method="_on_ScrollContainer_scroll_ended"]
[connection signal="scroll_started" from="HBoxContainer/ScrollContainer" to="." method="_on_ScrollContainer_scroll_started"]
